--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular-route": "1.4.3",
     "lodash": "3.10.0",
     "angular-cookies": "1.4.3",
-    "requirejs": "2.1.20"
+    "requirejs": "2.1.20",
+    "less": "2.5.1"
   }
 }
