--- a/bower.json
+++ b/bower.json
@@ -16,10 +16,9 @@
   "dependencies": {
     "angular": "1.4.3",
     "angular-mocks": "1.4.3",
+    "angular-ui-router": "0.2.15",
     "bootstrap": "3.3.5",
-    "angular-route": "1.4.3",
     "lodash": "3.10.0",
-    "angular-cookies": "1.4.3",
     "requirejs": "2.1.20",
     "less": "2.5.1"
   }
