Починил unit-тесты

--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "devDependencies": {
     "bower": "1.4.1",
-    "connect": "3.4.0",
     "git-hooks": "1.0.0-rc.4",
     "jasmine-core": "2.3.4",
     "jscs": "2.0.0",
@@ -19,11 +18,8 @@
     "karma": "0.13.3",
     "karma-chrome-launcher": "0.2.0",
     "karma-jasmine": "0.3.6",
-    "karma-requirejs": "0.2.2",
     "lodash": "3.10.0",
     "protractor": "2.1.0",
-    "requirejs": "2.1.20",
-    "serve-static": "1.10.0",
-    "sync-prompt": "0.4.2"
+    "requirejs": "2.1.20"
   }
 }
