--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "karma-chrome-launcher": "0.2.0",
     "karma-jasmine": "0.3.6",
     "lodash": "3.10.0",
-    "protractor": "2.1.0",
+    "protractor": "^1.3.1",
     "requirejs": "2.1.20"
   }
 }
