--- a/package.json
+++ b/package.json
@@ -5,21 +5,19 @@
   "author": "Vasiliy Dyakov",
   "private": true,
   "dependencies": {
+    "babel": "^5.8.23",
+    "debug": "^2.2.0",
+    "dispatchr": "^0.3.3",
     "express": "^4.13.3",
-    "fs": "0.0.2"
+    "fs": "0.0.2",
+    "lodash": "3.10.0",
+    "react": "^0.13.3"
   },
   "devDependencies": {
-    "bower": "1.4.1",
     "git-hooks": "1.0.0-rc.4",
-    "jasmine-core": "2.3.4",
     "jscs": "2.0.0",
     "jshint": "2.8.0",
     "jshint-groups": "0.8.0",
-    "karma": "0.13.3",
-    "karma-chrome-launcher": "0.2.0",
-    "karma-jasmine": "0.3.6",
-    "lodash": "3.10.0",
-    "protractor": "^1.3.1",
-    "requirejs": "2.1.20"
+    "node-inspector": "^0.12.3"
   }
 }
