--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dispatchr": "^0.3.3",
     "express": "^4.13.3",
     "fs": "0.0.2",
+    "less": "^2.5.3",
     "lodash": "3.10.0",
     "react": "^0.13.3"
   },
@@ -18,6 +19,7 @@
     "jscs": "2.0.0",
     "jshint": "2.8.0",
     "jshint-groups": "0.8.0",
-    "node-inspector": "^0.12.3"
+    "node-inspector": "^0.12.3",
+    "webpack": "^1.12.2"
   }
 }
