--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "babel": "^5.8.23",
+    "bluebird": "^2.10.2",
     "debug": "^2.2.0",
     "dispatchr": "^0.3.3",
     "express": "^4.13.3",
