--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "private": true,
   "dependencies": {
     "babel": "^5.8.23",
+    "babel-jscs": "^2.0.4",
+    "babel-runtime": "^5.8.25",
     "bluebird": "^2.10.2",
     "debug": "^2.2.0",
     "dispatchr": "^0.3.3",
