--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "remote",
-  "version": "0.0.1",
-  "description": "Site for remote work for groups of developers",
-  "author": "Vasiliy Dyakov",
-  "private": true,
-  "dependencies": {
-    "babel": "5.8.23",
-    "babel-jscs": "2.0.4",
-    "babel-runtime": "5.8.25",
-    "bluebird": "2.10.2",
-    "debug": "2.2.0",
-    "dispatchr": "0.3.3",
-    "express": "4.13.3",
-    "fs": "0.0.2",
-    "less": "2.5.3",
-    "lodash": "3.10.0",
-    "react": "0.13.3"
-  },
-  "devDependencies": {
-    "git-hooks": "1.0.0-rc.4",
-    "jscs": "2.0.0",
-    "jshint": "2.8.0",
-    "jshint-groups": "0.8.0",
-    "jsxhint": "0.15.1",
-    "node-inspector": "0.12.3",
-    "webpack": "1.12.2"
-  }
+    "name": "remote",
+    "version": "0.0.1",
+    "description": "Site for remote work for groups of developers",
+    "author": "Vasiliy Dyakov",
+    "private": true,
+    "dependencies": {
+        "babel": "5.8.23",
+        "babel-runtime": "5.8.25",
+        "bluebird": "2.10.2",
+        "dispatchr": "0.3.3",
+        "express": "4.13.3",
+        "fs": "0.0.2",
+        "less": "2.5.3",
+        "lodash": "3.10.0",
+        "react": "0.13.3"
+    },
+    "devDependencies": {
+        "babel-eslint": "4.1.3",
+        "babel-jscs": "2.0.4",
+        "debug": "2.2.0",
+        "eslint": "1.7.3",
+        "eslint-plugin-react": "3.6.3",
+        "git-hooks": "1.0.0-rc.4",
+        "jscs": "2.0.0",
+        "node-inspector": "0.12.3",
+        "webpack": "1.12.2"
+    }
 }
