--- a/package.json
+++ b/package.json
@@ -13,17 +13,34 @@
         "fs": "0.0.2",
         "less": "2.5.3",
         "lodash": "3.10.0",
-        "react": "0.13.3"
+        "react": "0.14.0",
+        "react-dom": "0.14.0"
     },
     "devDependencies": {
+        "babel-cli": "6.0.2",
         "babel-eslint": "4.1.3",
+        "babel-jest": "5.3.0",
         "babel-jscs": "2.0.4",
         "debug": "2.2.0",
         "eslint": "1.7.3",
         "eslint-plugin-react": "3.6.3",
         "git-hooks": "1.0.0-rc.4",
         "jscs": "2.0.0",
+        "jest-cli": "0.6.1",
         "node-inspector": "0.12.3",
+        "react-addons-test-utils": "0.14.0",
         "webpack": "1.12.2"
+    },
+    "scripts": {
+        "test": "jest"
+    },
+    "jest": {
+        "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
+        "unmockedModulePathPatterns": [
+            "<rootDir>/node_modules/react",
+            "<rootDir>/node_modules/react-dom",
+            "<rootDir>/node_modules/react-addons-test-utils",
+            "<rootDir>/node_modules/fbjs"
+        ]
     }
 }
