--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "devDependencies": {
         "babel-cli": "6.0.2",
+        "babel-core": "6.0.12",
         "babel-eslint": "4.1.3",
         "babel-jest": "5.3.0",
         "babel-jscs": "2.0.4",
@@ -26,6 +27,7 @@
         "eslint-plugin-react": "3.6.3",
         "git-hooks": "1.0.0-rc.4",
         "jscs": "2.0.0",
+        "jsonlint": "1.6.2",
         "jest-cli": "0.6.1",
         "node-inspector": "0.12.3",
         "react-addons-test-utils": "0.14.0",
@@ -37,10 +39,7 @@
     "jest": {
         "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
         "unmockedModulePathPatterns": [
-            "<rootDir>/node_modules/react",
-            "<rootDir>/node_modules/react-dom",
-            "<rootDir>/node_modules/react-addons-test-utils",
-            "<rootDir>/node_modules/fbjs"
+            "<rootDir>/node_modules"
         ]
     }
 }
