--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "less": "2.5.3",
         "lodash": "3.10.0",
         "react": "0.14.0",
-        "react-dom": "0.14.0"
+        "react-dom": "0.14.0",
+        "supervisor": "0.9.1"
     },
     "devDependencies": {
         "babel-cli": "6.0.2",
