--- a/package.json
+++ b/package.json
@@ -19,19 +19,22 @@
     },
     "devDependencies": {
         "babel-cli": "6.0.2",
-        "babel-core": "6.0.14",
+        "babel-core": "5.8.23",
         "babel-eslint": "4.1.3",
         "babel-jest": "5.3.0",
         "babel-jscs": "2.0.4",
+        "babelify": "6.4.0",
+        "browserify": "12.0.1",
         "debug": "2.2.0",
         "eslint": "1.7.3",
         "eslint-plugin-react": "3.6.3",
         "git-hooks": "1.0.0-rc.4",
+        "jest-cli": "0.6.1",
         "jscs": "2.0.0",
         "jsonlint": "1.6.2",
-        "jest-cli": "0.6.1",
         "node-inspector": "0.12.3",
         "react-addons-test-utils": "0.14.0",
+        "watchify": "3.6.0",
         "webpack": "1.12.2"
     },
     "scripts": {
