--- a/.babelrc
+++ b/.babelrc
@@ -2,8 +2,5 @@
     "ignore": [
         "node_modules/**/*"
     ],
-    "optional": [
-        "runtime",
-        "es7.classProperties"
-    ]
+    "stage": 0
 }
