--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,10 @@
     "rules": {
         "indent": [
             2,
-            4
+            4,
+            {
+                "SwitchCase": 1
+            }
         ],
         "quotes": [
             2,
