--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
         "babel": "5.8.23",
         "babel-runtime": "5.8.25",
         "bluebird": "2.10.2",
-        "dispatchr": "0.3.3",
         "express": "4.13.3",
         "fs": "0.0.2",
         "less": "2.5.3",
         "lodash": "3.10.0",
         "react": "0.14.0",
         "react-dom": "0.14.0",
+        "react-redux": "4.0.0",
+        "redux": "3.0.4",
         "supervisor": "0.9.1"
     },
     "devDependencies": {
@@ -34,6 +35,7 @@
         "jsonlint": "1.6.2",
         "node-inspector": "0.12.3",
         "react-addons-test-utils": "0.14.0",
+        "redux-devtools": "2.1.5",
         "watchify": "3.6.0",
         "webpack": "1.12.2"
     },
