Подключил react-bootstrap

--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
         "babel": "5.8.23",
         "babel-runtime": "5.8.25",
         "bluebird": "2.10.2",
+        "bootstrap": "3.3.6",
         "express": "4.13.3",
         "fs": "0.0.2",
         "less": "2.5.3",
         "lodash": "3.10.0",
         "react": "0.14.0",
+        "react-bootstrap": "0.28.1",
         "react-dom": "0.14.0",
         "react-redux": "4.0.0",
         "redux": "3.0.4",
